# stock_datasource

./: .gitignore  .releaserc.json  A2A_FINDINGS.txt  ARCHITECTURE_DIAGRAM.txt  CHANGELOG.md  INVESTIGATION_COMPLETE.txt  INVESTIGATION_SUMMARY.txt  MENU_STRUCTURE_VISUAL.txt  pyproject.toml  run_sentinel_demo.py
.github/workflows/: docker-build.yml  release.yml
docs/: ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  ETF_DATA_ISSUES_AND_FIXES.md  HARNESS_MIGRATION_GUIDE.md  HARNESS_MIGRATION_METHOD.md  PLUGIN_QUICK_START.md  QUICK_LOAD_GUIDE.md  TOPLIST_FEATURES.md  hybrid_trend_strategy_guide.md
docs/migrations/: HK_DAILY_MIGRATION.md
docs/superpowers/plans/: 2026-05-21-chat-agent-decision-trace.md
frontend/: vite.config.ts
frontend/src/: App.vue
frontend/src/api/: chat.ts  datamanage.ts  decision.ts
frontend/src/components/chat/: DecisionSignalPanel.vue  DiscussionEventsViewer.vue
frontend/src/composables/: useMenuTracking.ts
frontend/src/router/: index.ts
frontend/src/stores/: chat.ts  memory.ts
frontend/src/views/agent-management/: AgentEditor.vue  AgentList.vue  RuntimeManagement.vue
frontend/src/views/arena/: ArenaDetail.vue  ArenaManagement.vue
frontend/src/views/chat/: ChatView.vue
frontend/src/views/datamanage/: DataManageView.vue
frontend/src/views/decision/: DecisionDashboard.vue
frontend/src/views/memory/: MemoryView.vue
frontend/src/views/orchestration/: OrchestrationEditor.vue  OrchestrationList.vue
frontend/src/views/sentinel/: SentinelView.vue
openspec/changes/add-qmt-plugin/: design.md  proposal.md  tasks.md
openspec/changes/improve-agent-research-center/: proposal.md  tasks.md
openspec/changes/refactor-orchestrator-simplify/: proposal.md  tasks.md
src/stock_datasource/: __init__.py
src/stock_datasource/agents/: __init__.py  chat_agent.py  config_driven_harness_agent.py  market_agent.py  orchestrator.py  portfolio_agent.py  report_agent.py
src/stock_datasource/api/: workflow_routes.py
src/stock_datasource/arena/: decision_summarizer.py  discussion_orchestrator.py  models.py
src/stock_datasource/arena/agents/: base.py
src/stock_datasource/backtest/: engine.py
src/stock_datasource/config/: runtime_config.py  settings.py
src/stock_datasource/core/data_sources/: __init__.py  base.py  (+1 more)
src/stock_datasource/data_sources/: __init__.py
src/stock_datasource/models/: schemas.py
src/stock_datasource/modules/: __init__.py
src/stock_datasource/services/: agent_registrations.py  agent_registry.py  chat_arena_adapter.py  daily_analysis_service.py  orchestration_engine.py  session_memory_service.py  task_queue.py  task_worker.py  tool_registry.py
src/stock_datasource/strategies/: init.py
tests/: conftest.py  test_chat_decision_trace.py  test_datamanage_data_source_selection.py  test_market_timing.py  test_qmt_gateway_provider.py  test_qmt_plugin_provider_routing.py  test_qmt_realtime.py  test_user_scoped_features.py
(+54 files in other folders)
