[project]
name = "stock-datasource"
version = "0.1.0"
description = "Local financial database for A-share/HK stocks using ClickHouse + TuShare + Airflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clickhouse-driver>=0.2.6",
    "tushare>=1.3.0",
    "akshare>=1.13.0",
    "apache-airflow>=2.7.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
    "langfuse>=2.0.0",
    "deepagents>=0.1.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=1.0.0",
    "langgraph-supervisor>=0.0.30",
    "langgraph-swarm>=0.1.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "loguru>=0.7.0",
    "click>=8.1.0",
    "fastapi>=0.104.0",
    "flask>=3.0.0",
    "uvicorn>=0.24.0",
    "fastmcp>=0.1.0",
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",
    "redis>=5.0.0",
    "apscheduler>=3.10,<4.0",
    "schedule>=1.1.0",
    "yfinance>=0.2.0",
    "finnhub-python>=2.4.27",
    "pyyaml>=6.0",
    "sqlparse>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.8.0",
    "mypy>=1.5.0",
]

[project.scripts]
stock-ds = "cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_datasource"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # ternary operator (readability preference)
    "RUF001", # ambiguous unicode char in string (Chinese project)
    "RUF002", # ambiguous unicode char in docstring (Chinese project)
    "RUF003", # ambiguous unicode char in comment (Chinese project)
    "RUF013", # implicit optional (pervasive in existing code)
    "B904",   # raise-without-from-inside-except (pervasive in existing code)
    "B905",   # zip-without-explicit-strict (pervasive in existing code)
    "W291",   # trailing whitespace (handled by formatter)
    "W293",   # blank line with whitespace (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["stock_datasource"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
